--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
+    <!-- Icon -->
+    <link rel="icon" type="image/png" href="img/favicon.ico" />
+
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
 
