Criada a frase dos 2 primeiros blocos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="header-content-inner">
           <h1 id="homeHeading">Uma pequena ideia, um grande propósito</h1>
           <hr>
-          <p>Com uma simples ideia podemos criar um novo universo!</p>
+          <p>Com simples ideias, um pouco de dificuldade e muita diversão, podemos mudar o mundo!</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Veja mais!</a>
         </div>
       </div>
@@ -69,10 +69,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">É dificil mas é divertido !</h2>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded">Com uma equipe de cerca de 20 pessoas 2 horas de trabalho e alguns equipamentos, foi possivel tirar uma ideia 
+              do papel e traze-la para o mundo real. Aprendemos sem ser ensinados, criamos com nossas próprias ideias, com a ajuda de todos tiramos uma ideia do papel
+              e trouxemos para o mundo.
+            </p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Vamos Começar!</a>
           </div>
         </div>
       </div>
@@ -254,7 +257,7 @@
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
+    <!-- Plugin JavaScript -->  
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
