--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Fale Conosco</a>
             </li>
           </ul>
         </div>
@@ -129,95 +129,60 @@
       <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
+            <a class="portfolio-box" href="img/1.jpg">
+              <img class="img-fluid" src="img/1.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
+            <a class="portfolio-box" href="img/2.jpg">
+              <img class="img-fluid" src="img/2.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
+            <a class="portfolio-box" href="img/3.jpg">
+              <img class="img-fluid" src="img/3.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
+            <a class="portfolio-box" href="img/4.jpg">
+              <img class="img-fluid" src="img/4.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
+            <a class="portfolio-box" href="img/6.jpg">
+              <img class="img-fluid" src="img/6.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
+            <a class="portfolio-box" href="img/8.jpg">
+              <img class="img-fluid" src="img/8.jpg" alt="">
             </a>
           </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/9.jpg">
+              <img class="img-fluid" src="img/9.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/10.jpg">
+              <img class="img-fluid" src="img/10.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/11.jpg">
+              <img class="img-fluid" src="img/11.jpg" alt="">
+            </a>
+          </div> 
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/12.jpg">
+              <img class="img-fluid" src="img/12.jpg" alt="">
+            </a>
+          </div> 
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/13.jpg">
+              <img class="img-fluid" src="img/13.jpg" alt="">
+            </a>
+          </div>  
         </div>
       </div>
     </section>
