Feito seção de etapas

--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
       </div>
     </section>
 
+    <section class="bg-primary" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">Mão na massa !</h2>
+            <hr class="light">
+            <p class="text-white">Etapa 1</p>
+            <p class="text-white">Etapa 2</p>
+            <p class="text-white">Etapa 3</p>
+            <p class="text-white">Etapa 4</p>
+            <p class="text-white">Etapa 5</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="p-0" id="portfolio">
       <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
