--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             papel e traze-la para o mundo real. Aprendemos sem ser ensinados, criamos com nossas próprias ideias, com a ajuda
             de todos tiramos uma ideia do papel e trouxemos para o mundo.
           </p>
-          <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Vamos Começar!</a>
+          <a class="btn btn-default btn-xl js-scroll-trigger" href="#elementos">Vamos Começar!</a>
         </div>
       </div>
     </div>
