--- a/index.html
+++ b/index.html
@@ -239,6 +239,21 @@
     </div>
   </section>
 
+  <section class="bg-primary" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="section-heading text-white">O Projeto !</h2>
+          <hr class="light">
+          <p class="text-faded">O quê fizemos a final ?</p>
+          <a class="portfolio-box" href="img/20.jpg">
+            <img class="img-fluid" src="img/20.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="call-to-action bg-dark">
     <div class="container text-center">
       <h2>Baixe nosso artigo padrão IEEE feito em LateX</h2>
