Feita seção de participantes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
             <a class="nav-link js-scroll-trigger" href="#elementos">Elementos</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#maoNaMassa">Mão na massa</a>
+            </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#projeto">Projeto</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#participantes">Participantes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Fale Conosco</a>
@@ -128,7 +137,7 @@
     </div>
   </section>
 
-  <section class="bg-primary" id="about">
+  <section class="bg-primary" id="maoNaMassa">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -239,7 +248,7 @@
     </div>
   </section>
 
-  <section class="bg-primary" id="about">
+  <section class="bg-primary" id="projeto">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -261,7 +270,46 @@
     </div>
   </div>
 
-  <section id="contact">
+  <section id="participantes">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">Participantes</h2>
+          <hr class="primary">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 text-center">
+            <h3>Adison Esteves</h3>
+            <h3>Alisson Steffens</h3>
+            <h3>André Smaniotto</h3>
+            <h3>Augusto Pluschkat</h3>
+            <h3>Cristian Coelho</h3>
+            <h3>Fernanda Bailer</h3>
+          </div>
+          <div class="col-lg-4 col-md-6 text-center">
+          <h3>Gabriel Luis</h3>
+          <h3>Gustavo Rodrigo</h3>
+          <h3>Hélio André</h3>
+          <h3>Ivan Galvagno</h3>
+          <h3>Jonathan Evangelista</h3>
+          <h3>Leonardo Prange</h3>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center">
+          <h3>Marcelo Souza</h3>
+          <h3>Matheus Domingos</h3>
+          <h3>Peterson Menezes</h3>
+          <h3>Rafael Gustavo</h3>
+          <h3>Yagan James</h3>
+          <h3>André Raabe</h3>          
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="call-to-action bg-dark" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
