--- a/index.html
+++ b/index.html
@@ -254,10 +254,9 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading text-white">O Projeto !</h2>
           <hr class="light">
-          <p class="text-faded">O quê fizemos a final ?</p>
-          <a class="portfolio-box" href="img/20.jpg">
-            <img class="img-fluid" src="img/20.jpg" alt="">
-          </a>
+          <p class="text-faded">O quê fizemos afinal ?</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/9-vG-JwS70U" frameborder="0" allowfullscreen>
+          </iframe>
         </div>
       </div>
     </div>
