--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <h2 class="section-heading text-white">O Projeto !</h2>
           <hr class="light">
           <p class="text-faded">O quê fizemos afinal ?</p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/9-vG-JwS70U" frameborder="0" allowfullscreen>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ffxeeEJCG3I" frameborder="0" allowfullscreen>
           </iframe>
         </div>
       </div>
@@ -281,28 +281,29 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
-            <h3>Adison Esteves</h3>
-            <h3>Alisson Steffens</h3>
+          <h3>Adison Esteves</h3>
+          <h3>Alisson Steffens</h3>
+          <h3>André Raabe</h3>          
             <h3>André Smaniotto</h3>
             <h3>Augusto Pluschkat</h3>
             <h3>Cristian Coelho</h3>
-            <h3>Fernanda Bailer</h3>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
+              <h3>Felipe Marcola</h3>
+          <h3>Fernanda Bailer</h3>
           <h3>Gabriel Luis</h3>
           <h3>Gustavo Rodrigo</h3>
           <h3>Hélio André</h3>
           <h3>Ivan Galvagno</h3>
           <h3>Jonathan Evangelista</h3>
-          <h3>Leonardo Prange</h3>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
+          <h3>Leonardo Prange</h3>
           <h3>Marcelo Souza</h3>
           <h3>Matheus Domingos</h3>
           <h3>Peterson Menezes</h3>
           <h3>Rafael Gustavo</h3>
           <h3>Yagan James</h3>
-          <h3>André Raabe</h3>          
         </div>
       </div>
     </div>
